--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
 </head>
 
 <body>
-	<form action="" class="form">
-		<label for="deposit">Ежемесячный взонс</label>
-		<input type="text" name="deposit" id="deposit" value="1000">
-		<label for="inRate">Номинальная процентная ставка</label>
-		<input type="text" name="inRate" id="inRate" value="5">
-		<label for="inMonth">Срок</label>
-		<input type="text" name="inMonth" id="inMonth" value="14">
-		Итого:
-		<button type="submit" id="createGraphicButton"></button>
-	</form>
-	<div class="all_money" id="y1"></div>
+	<div class="wrapper">
+		<form action="" class="form">
+			<label for="deposit">Ежемесячный взонс</label>
+			<input type="text" name="deposit" id="deposit" value="1000">
+			<label for="inRate">Номинальная процентная ставка</label>
+			<input type="text" name="inRate" id="inRate" value="5">
+			<label for="inMonth">Срок</label>
+			<input type="text" name="inMonth" id="inMonth" value="14">
+			Итого:
+			<button type="submit" id="createGraphicButton"></button>
+		</form>
+		<div class="all_money" id="y1"></div>
+	</div>
+
 
 	<script src="script.js"></script>
 </body>
